Update image source in timeline item

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="timeline">
             <div class="item" data-taxt="《年少有为》">
                 <div class="content">
-                    <img src="/HTML/1.jpg" alt="" class="img" loading="lazy">
+                    <img src="/qianying/1.jpg" alt="" class="img" loading="lazy">
                     <h2 class="content-titlt">2018年9月13日</h2>
                     <p class="content-desc">
                         这一天你发布了第一条视频，恭喜浅浅子成为一位视频创作者。
