Update image source in index.html

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </div>
             <div class="item" data-taxt="《草木》">
                 <div class="content">
-                    <img src="/HTML/2.jpg" alt="" class="img" loading="lazy">
+                    <img src="./qianying/2.jpg" alt="" class="img" loading="lazy">
                     <h2 class="content-titlt">2018年12月05日</h2>
                     <p class="content-desc">
                         这天你翻唱了《草木》，收获了22.5万赞！可喜可贺！
